k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radassist-web
spec:
  replicas: 1
  selector:
    matchLabels: { app: radassist-web }
  template:
    metadata:
      labels: { app: radassist-web }
    spec:
      containers:
      - name: web
        image: ghcr.io/muhammadh01/radassist-web:v1
        ports:
        - containerPort: 80
        resources:
          requests: { memory: "64Mi", cpu: "50m" }
          limits: { memory: "128Mi", cpu: "200m" }
---
apiVersion: v1
kind: Service
metadata:
  name: radassist-web
spec:
  selector: { app: radassist-web }
  ports:
  - port: 80
    targetPort: 80
