k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radassist
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - radassist.durak.dev
    secretName: radassist-tls
  rules:
  - host: radassist.durak.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radassist-web
            port:
              number: 80
